miniInput_curl/mini_report_curl
andy@ubuntu:~/Desktop/test598/curlMini/cs510Files/miniInput_curl$ bash bug_report_curl.sh 
main.c:2:1: error: unknown type name ‘sigjmp_buf’
 sigjmp_buf curl_jmpenv;
 ^
Translation failed. To repeat, run this command in directory miniInput_curl:
kcc -d -c main.c -o hello
hello can be generated by gcc

